Fixed CSS button outline on Firefox mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -37,6 +37,10 @@
             outline: 0;
         }
 
+        &::-moz-focus-inner {
+            border: 0;
+        }
+
         &:active {
             background: $color-tertiary;
         }
